# datawarehouse_dbt

./: Guia de estudo rafael.yaml  Plano de estudo Engenharia de dados.md  README.md  how 92cc90d  pyproject.toml
comandos_importantes_manipulação_dados/: Comandos SQL manipular dados.txt
datawarehouse/: dbt_project.yml  schema.yml
datawarehouse/docs/: homepage.md
datawarehouse/models/datamart/: dm_atencao_basica_municipio.sql  schema.yml
datawarehouse/models/staging/: schema.yml  stg_atencao_basica_municipio.sql
projeto_teste/: resultado_etl.hpl
src/: extract.py  extract_load.py  teste.py
